# csi_images

./: Dockerfile  README.md  make_docker.sh  pyproject.toml  requirements-versioned.txt  requirements.txt
csi_images/: csi_events.py  csi_frames.py  csi_images.py  csi_scans.py  csi_tiles.py  make_docs.py
docs/: csi_images.html  index.html  search.js  tests.html
docs/csi_images/: csi_events.html  csi_frames.html  csi_images.html  csi_scans.html  csi_tiles.html  make_docs.html
docs/examples/: scan_exampes.html
docs/tests/: temp.html  test_events.html  test_frames.html  test_tiles.html
examples/: scan_exampes.py
tests/: temp.py  test_events.py  test_frames.py  test_tiles.py
tests/data/: ocular_interesting.csv  ocular_interesting.rds
