[project]
name = "csi_images"
version = "1.1.0"
description = "CSI-Cancer image data structure and basic processing."
requires-python = ">=3.11"
authors = [
    { name = "Brian J. Zhang", email = "8885230+brianjzhang@users.noreply.github.com" }
]
readme = "README.md"

dependencies = [
    "PyYAML >=6.0",
    "aicspylibczi >=3.2",
    "opencv-python-headless >=4.5",
    "pandas >=2.0",
]

[project.scripts]
make_docs = "csi_images.make_docs:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]